--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,7 @@
   "jsxSingleQuote": false,
   "semi": true,
   "tabWidth": 2,
+  "singleQuote": true,
   "endOfLine": "auto",
   "trailingComma": "all"
 }
