--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.3",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.3"
   },
   "lint-staged": {
     "*.{vue,js,ts,jsx,tsx,md,json}": [
