--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx,.json --max-warnings 0 --cache",
     "lint:fix": "pnpm run lint --fix",
     "format": "prettier --write --cache .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "vitest test",
+    "coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +20,7 @@
     "@types/node": "^20.5.7",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
+    "@vitest/coverage-v8": "^0.34.3",
     "cz-customizable": "6.3.0",
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
