feat(build、publish): 添加tsup构建打包和changesets发布

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,15 +1,33 @@
 {
-  "name": "@beamjs/core",
+  "name": "@beamsjs/core",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "unpkg": "./dist/index.global.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.ts"
+    },
+    "./*": "./*"
+  },
+  "engines": {
+    "node": ">=14",
+    "pnpm": ">=7.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@beamjs/shared": "workspace:*"
+    "@beamsjs/shared": "workspace:*"
   }
 }
